--- a/collapsiblecalendarview2/src/main/res/layout/widget_collapsible_calendarview.xml
+++ b/collapsiblecalendarview2/src/main/res/layout/widget_collapsible_calendarview.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/layout_root"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -95,5 +95,19 @@
         </TableLayout>
 
     </com.shrikanthravi.collapsiblecalendarview.view.LockScrollView>
+    <com.shrikanthravi.collapsiblecalendarview.view.ExpandIconView
+        android:layout_width="30dp"
+        android:layout_gravity="center"
+        android:visibility="visible"
+        app:eiv_animationDuration="300"
+        app:eiv_color="#000"
+        app:eiv_colorLess="@android:color/black"
+        app:eiv_colorMore="@android:color/black"
+        app:eiv_colorIntermediate="@android:color/black"
+        app:eiv_roundedCorners="true"
+        app:eiv_switchColor="true"
+        android:id="@+id/expandIcon"
+        android:layout_height="30dp"/>
+
 
 </LinearLayout>
