--- a/collapsiblecalendarview2/src/main/res/values/attrs.xml
+++ b/collapsiblecalendarview2/src/main/res/values/attrs.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <declare-styleable name="ExpandIconView">
+        <attr name="eiv_roundedCorners" format="boolean"/>
+        <attr name="eiv_switchColor" format="boolean"/>
+        <attr name="eiv_color" format="color"/>
+        <attr name="eiv_colorMore" format="color"/>
+        <attr name="eiv_colorLess" format="color"/>
+        <attr name="eiv_colorIntermediate" format="color"/>
+        <attr name="eiv_animationDuration" format="integer"/>
+        <attr name="eiv_padding" format="dimension"/>
+    </declare-styleable>
+
     <declare-styleable name="UICalendar">
 
         <attr name="showWeek" format="boolean" />
@@ -33,11 +44,9 @@
         <attr name="buttonRight_drawable" format="integer" />
 
         <attr name="buttonLeft_drawableTintColor" format="color" />
-        <attr name="buttonLeft_drawableTinctColor" format="color" />
+        <attr name="buttonRight_drawableTintColor" format="color" />
 
-
-
-
+        <attr name="expandIconColor" format="color" />
 
     </declare-styleable>
 
