--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
         app:primaryColor="@color/google_red"
         app:textColor="@android:color/white"
         app:selectedItem_textColor="@color/google_red"
+        android:id="@+id/collapsibleCalendarView"
         app:todayItem_textColor="@android:color/white"
         app:todayItem_background="@drawable/circle_white_stroke_background"
         app:selectedItem_background="@drawable/circle_white_solid_background"
