--- a/collapsiblecalendarview2/src/main/res/values/attrs.xml
+++ b/collapsiblecalendarview2/src/main/res/values/attrs.xml
@@ -34,6 +34,9 @@
         <attr name="textColor" format="color" />
         <attr name="primaryColor" format="color" />
 
+        <attr name="eventColor" format="color" />
+
+
         <attr name="todayItem_textColor" format="color" />
         <attr name="todayItem_background" format="integer" />
 
