--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,5 +18,6 @@
         app:buttonLeft_drawableTintColor="@android:color/white"
         app:buttonRight_drawableTintColor="@android:color/white"
         app:expandIconColor="@android:color/white"
+        app:eventColor="@android:color/white"
         ></com.shrikanthravi.collapsiblecalendarview.widget.CollapsibleCalendar>
 </RelativeLayout>
