Set the event dot size, small or big

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,5 +19,6 @@
         app:buttonRight_drawableTintColor="@android:color/white"
         app:expandIconColor="@android:color/white"
         app:eventColor="@android:color/white"
+        app:eventDotSize="small"
         ></com.shrikanthravi.collapsiblecalendarview.widget.CollapsibleCalendar>
 </RelativeLayout>
