--- a/collapsiblecalendarview2/src/main/res/layout/widget_collapsible_calendarview.xml
+++ b/collapsiblecalendarview2/src/main/res/layout/widget_collapsible_calendarview.xml
@@ -24,7 +24,7 @@
                 android:layout_margin="2dp"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:src="@drawable/left_icon" />
+                app:srcCompat="@drawable/left_icon" />
 
             <ImageView
                 android:id="@+id/btn_next_month"
@@ -33,7 +33,7 @@
                 android:layout_margin="2dp"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
-                android:src="@drawable/right_icon" />
+                app:srcCompat="@drawable/right_icon" />
 
         </RelativeLayout>
 
@@ -49,7 +49,7 @@
                 android:layout_margin="2dp"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:src="@drawable/left_icon" />
+                app:srcCompat="@drawable/left_icon" />
 
             <ImageView
                 android:id="@+id/btn_next_week"
@@ -58,7 +58,7 @@
                 android:layout_margin="2dp"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
-                android:src="@drawable/right_icon" />
+                app:srcCompat="@drawable/right_icon" />
 
         </RelativeLayout>
 
@@ -90,6 +90,7 @@
         <TableLayout
             android:id="@+id/table_body"
             android:layout_width="match_parent"
+            android:isScrollContainer="true"
             android:layout_height="wrap_content">
 
         </TableLayout>
