--- a/collapsiblecalendarview2/src/main/res/values/attrs.xml
+++ b/collapsiblecalendarview2/src/main/res/values/attrs.xml
@@ -15,6 +15,8 @@
     <declare-styleable name="UICalendar">
 
         <attr name="showWeek" format="boolean" />
+        <attr name="hideArrows" format="boolean" value="true"/>
+        <attr name="datePattern" format="string" value="MMMM"/>
 
         <attr name="firstDayOfWeek" format="enum">
             <enum name="sunday" value="0" />
