--- a/collapsiblecalendarview2/src/main/res/layout/widget_collapsible_calendarview.xml
+++ b/collapsiblecalendarview2/src/main/res/layout/widget_collapsible_calendarview.xml
@@ -64,7 +64,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-
         <TextView
             android:id="@+id/txt_title"
             android:layout_width="wrap_content"
@@ -90,6 +89,14 @@
             app:eiv_switchColor="true"
             app:layout_constraintStart_toEndOf="@id/txt_title"
             app:layout_constraintTop_toTopOf="parent" />
+        <ImageView
+            android:id="@+id/today_icon"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:src="@drawable/calender_icon"
+            android:layout_marginEnd="16dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
