Moved to androidx and added gesture for left and right swipe

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,17 +16,16 @@
         <com.shrikanthravi.collapsiblecalendarview.widget.CollapsibleCalendar
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:primaryColor="@color/google_red"
-            app:textColor="@android:color/white"
-            app:selectedItem_textColor="@color/google_red"
+            app:textColor="@android:color/black"
+            app:selectedItem_textColor="@android:color/white"
             android:id="@+id/collapsibleCalendarView"
-            app:todayItem_textColor="@android:color/white"
+            app:todayItem_textColor="@android:color/black"
             app:todayItem_background="@drawable/circle_white_stroke_background"
             app:selectedItem_background="@drawable/circle_white_solid_background"
-            app:buttonLeft_drawableTintColor="@android:color/white"
-            app:buttonRight_drawableTintColor="@android:color/white"
-            app:expandIconColor="@android:color/white"
-            app:eventColor="@android:color/white"
+            app:buttonLeft_drawableTintColor="@android:color/black"
+            app:buttonRight_drawableTintColor="@android:color/black"
+            app:expandIconColor="@android:color/black"
+            app:eventColor="@android:color/holo_red_dark"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
         <TextView
