--- a/app/src/main/res/drawable-v24/circle_white_stroke_background.xml
+++ b/app/src/main/res/drawable-v24/circle_white_stroke_background.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <stroke
-        android:color="@android:color/white"
+        android:color="@android:color/holo_red_dark"
         android:width="@dimen/day_circle_stroke_width" />
     <corners
         android:radius="@dimen/day_circle_radius" />
