--- a/collapsiblecalendarview2/src/main/res/drawable/circle_white_solid_background.xml
+++ b/collapsiblecalendarview2/src/main/res/drawable/circle_white_solid_background.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid
-        android:color="@android:color/white" />
+        android:color="@android:color/holo_red_dark" />
     <corners
         android:radius="@dimen/day_circle_radius" />
 
